paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.compile.log
warning: type `u8` should have an upper camel case name
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:3:6
  |
3 | type u8 = u8;
  |      ^^ help: convert the identifier to upper camel case (notice the capitalization): `U8`
  |
  = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: type `u32` should have an upper camel case name
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:4:6
  |
4 | type u32 = u32;
  |      ^^^ help: convert the identifier to upper camel case (notice the capitalization): `U32`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:27:5
   |
27 | /     unsafe {
28 | |         (*p).tag = 0xA1B2C3D4;
29 | |         (*p).n = N as u32;
30 | |     }
   | |_____^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:32:20
   |
32 |     let expected = unsafe { storage.as_ptr().add(off) };
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:33:16
   |
33 |     let got1 = unsafe { (p as *mut u8).add(off) };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:37:16
   |
37 |     let got2 = unsafe { (p as *mut u8).add(off) };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:41:20
   |
41 |     let data_ptr = unsafe { (p as *mut u8).add(off) as *mut u32 };
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:43:15
   |
43 |     while i < unsafe { (*p).n } {
   |               ^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:45:9
   |
45 |         unsafe { *data_ptr.add(i as usize) = v; }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:46:9
   |
46 |         unsafe { *data_ptr.add(i as usize) += 0; }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:49:5
   |
49 |     unsafe { (*p).sum = 0; }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:51:15
   |
51 |     while i < unsafe { (*p).n } {
   |               ^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:52:9
   |
52 |         unsafe { (*p).sum += *data_ptr.add(i as usize); }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:55:8
   |
55 |     if unsafe { (*p).sum } != compute_sum(N as u32) {
   |        ^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:67:5
   |
67 | /     unsafe {
68 | |         (*p).tag = 0;
69 | |         (*p).n = 0;
70 | |         (*p).sum = 0;
71 | |     }
   | |_____^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:73:20
   |
73 |     let expected = unsafe { storage.as_ptr().add(off) };
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:74:16
   |
74 |     let got1 = unsafe { (p as *mut u8).add(off) };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:78:16
   |
78 |     let got2 = unsafe { (p as *mut u8).add(off) };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0391]: cycle detected when expanding type alias `u8`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:3:11
  |
3 | type u8 = u8;
  |           ^^
  |
  = note: ...which immediately requires expanding type alias `u8` again
  = note: type aliases cannot be recursive
  = help: consider using a struct, enum, or union instead to break the cycle
  = help: see <https://doc.rust-lang.org/reference/types.html#recursive-types> for more information
note: cycle used when checking that `u8` is well-formed
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:3:1
  |
3 | type u8 = u8;
  | ^^^^^^^
  = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when expanding type alias `u32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:4:12
  |
4 | type u32 = u32;
  |            ^^^
  |
  = note: ...which immediately requires expanding type alias `u32` again
  = note: type aliases cannot be recursive
  = help: consider using a struct, enum, or union instead to break the cycle
  = help: see <https://doc.rust-lang.org/reference/types.html#recursive-types> for more information
note: cycle used when checking that `u32` is well-formed
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_002/target.rs:4:1
  |
4 | type u32 = u32;
  | ^^^^^^^^
  = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 18 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0391`.